# spacebevy

./: Cargo.toml  README.md
client/: .gitignore  Cargo.toml  index.html
client/js/: spacetimedb_bridge.js
client/src/: Trunk.toml  camera.rs  main.rs  scene.rs
client/src/app/: common.rs  desktop.rs  mod.rs  web.rs
client/src/net/: bridge.rs  mod.rs
client/src/net/module_bindings/: mod.rs
client/src/ui/: mod.rs  styles.rs
client/src/ui/perf/: cpu.rs  fps.rs  frame_time.rs  memory.rs  mod.rs
scripts/: spacetime_generate_bindings.sh  spacetime_server
server/: Dockerfile
server/src/: lib.rs
